--- a/polishness/templates/polishness/monument_single.html
+++ b/polishness/templates/polishness/monument_single.html
@@ -6,7 +6,7 @@ poznajmypolske.pl
 
 {% block style %}
     .card:hover {
-        border-color: #007bff;
+        border-color: #000;
         transform: scale(1.02); /* Slightly enlarge the brand */
         box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
     }
@@ -15,6 +15,18 @@ poznajmypolske.pl
     color: yellow;
     text-decoration: underline;
    }
+
+    .card {
+        background-color: #E6E6FA;
+        border-radius: 8px;
+        transition: all 0.3s ease;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        border: 2px solid #000;
+    }
+
+    table tbody tr:nth-child(even) {
+        background-color: #E6E6FA; /* Mniej intensywny, delikatny niebieski */
+    }
 
 
 {% endblock %}
