--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -22,6 +22,15 @@ poznajmypolske.pl
         border: 2px solid #000;
     }
 
+  input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
+  }
+
+  label {
+    font-size: 16px;
+  }
+
 {% endblock %}
 
 
@@ -88,9 +97,14 @@ poznajmypolske.pl
     </div>
     <div class="row mb-3">
     <div class="col-lg-8 col-md-8 col-sm-12 d-flex align-items-center">
-        <label for="quantity" class="form-label mb-0 me-2">Maksymalna liczba wynikowych wierszy:</label>
+        <label for="quantity" class="form-label mb-0">Maksymalna liczba wynikowych wierszy:</label>
         <input type="number" id="quantity" name="quantity" class="form-control custom-rounded" placeholder="...wpisz liczbę..." value="12" autocomplete="off" style="flex-grow: 1;">
+
     </div>
+        <div class="col-lg-8 col-md-8 col-sm-12 d-flex align-items-center">
+          <label for="is_archeological" class="form-label mb-0">Wyszukaj zabytki archeologiczne: </label>
+          <input type="checkbox" id="is_archeological" name="is_archeological" class="m-2 form-control custom-rounded">
+        </div>
         <div class="col-lg-4 col-md-4 col-sm-12 text-center">
             <input type="submit" value="Szukaj" class="btn btn-dark btn-lg mt-3 custom-rounded">
         </div>
