adds integration for archeo munuments

--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -45,7 +45,7 @@ poznajmypolske.pl
            <div class="col mb-0">
            <h2 class="mb-2" align="left">Na tej stronie możesz skorzystać z wyszukiwarki zabytków:</h2>
                <ul>
-                   <li>źródłem zabytków jest <a style="font-weight: bold; color: black;" href="https://dane.gov.pl/pl/dataset/1130,rejestr-zabytkow-nieruchomych">Rejestr zabytków nieruchomych</a> utrzymywany przez <a href="https://nid.pl" style="font-weight: bold; color: black;">Narodowy Instytut Dziedzictwa</a>,</li>
+                   <li>źródłem zabytków są <a style="font-weight: bold; color: black;" href="https://dane.gov.pl/pl/dataset/1130,rejestr-zabytkow-nieruchomych">Rejestr zabytków nieruchomych</a> oraz <a style="font-weight: bold; color: black;" href="https://dane.gov.pl/pl/dataset/210/resource/61339,rejestr-zabytkow-archeologicznych-plik-csv">Rejestr zabytków archeologicznych</a> utrzymywane przez <a href="https://nid.pl" style="font-weight: bold; color: black;">Narodowy Instytut Dziedzictwa</a>,</li>
                    <li>dla powiatów i gmin listy rozwijalne pojawiają się po wybraniu nadrzędnych jednostek administracyjnych,</li>
                    <li>każdy wyszukany zabytek pozwala na zobaczenie go na portalu <a href="https://zabytek.pl" style="font-weight: bold; color: black;">zabytek.pl</a> albo zapytania o niego sztuczną inteligencję (<a href="https://openai.com" style="color: black;">openai.com</a>)</li>
                </ul>
