--- a/polishness/templates/polishness/archeological-monuments.html
+++ b/polishness/templates/polishness/archeological-monuments.html
@@ -8,7 +8,7 @@ poznajmypolske.pl
 {% block style %}
 
     .card {
-        background-color: #f0ffd1;
+        background-color: #E6E6FA;
         border-radius: 8px;
         transition: all 0.3s ease;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
