--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -232,6 +232,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <div class="navbar-nav mr-auto">
             <strong><a class="navbar-brand m-3 p-2 btn-dark" href="{% url 'polishness:poland_in_numbers' %}">Polska w liczbach</a></strong>
+            <strong><a class="navbar-brand m-3 p-2 btn-dark" href="{% url 'polishness:nature' %}">Przyroda</a></strong>
             <strong><a class="navbar-brand m-3 p-2 btn-dark" href="{% url 'polishness:trips' %}">Wycieczki</a></strong>
             <strong><a class="navbar-brand m-3 p-2 btn-dark" href="{% url 'polishness:monuments' %}">Zabytki</a></strong>
         </div>
