--- a/polishness/templates/polishness/nature.html
+++ b/polishness/templates/polishness/nature.html
@@ -98,16 +98,18 @@ poznajmypolske.pl
                 <option value="bagna">Bagna, błota, torfowiska</option>
                 <option value="cyrki">Cyrki lodowcowe</option>
                 <option value="gory">Góry, szczyty, wzgórza, zbocza</option>
+                <option value="groble">Groble</option>
                 <option value="jaskinie">Jaskinie, groty</option>
                 <option value="jeziora">Jeziora, stawy, zbiorniki wodne</option>
                 <option value="lasy">Lasy</option>
                 <option value="mosty">Mosty</option>
                 <option value="parki">Parki</option>
+                <option value="wydmy">Obszary piaszczyste, wydmy</option>
                 <option value="wyspy">Półwyspy, wyspy, zatoki</option>
+                <option value="regiony">Regiony naturalne</option>
                 <option value="rzeki">Rzeki, potoki, strumyki, strugi, kanały</option>
                 <option value="skaly">Skały, głazy</option>
                 <option value="uroczyska">Uroczyska</option>
-                <option value="wydmy">Wydmy</option>
                 <option value="inne">Inne obiekty geograficzne</option>
             </select>
         </div>
