--- a/polishness/templates/polishness/nature.html
+++ b/polishness/templates/polishness/nature.html
@@ -125,7 +125,7 @@ poznajmypolske.pl
             <input type="submit" value="Szukaj" class="btn btn-dark btn-lg mt-3 custom-rounded">
         </div>
     </div>
-    <small> * maksymalnie można wyszukać 100 obiektów przyrodniczych</small><br>
+    <small> * maksymalnie można wyszukać 1000 obiektów przyrodniczych</small><br>
 </form>
 </div>
 
@@ -149,7 +149,7 @@ poznajmypolske.pl
                         <div class="card mb-4 box-shadow" style="border: 2px solid #000; padding: 2px;">
 
                             <div class="card-body">
-                                <h4 class=""><a href="{% url 'polishness:monument_single' nature_item.id %}">{{nature_item.name|capfirst}} ({{nature_item.geo_object_type}})</a></h4>
+                                <h4 class=""><a href="{% url 'polishness:nature_single' nature_item.id %}">{{nature_item.name|capfirst}} ({{nature_item.geo_object_type}})</a></h4>
                             </div>
                         </div>
                     </div>
