adds Wodospady option do nature search functionalities

--- a/polishness/templates/polishness/nature.html
+++ b/polishness/templates/polishness/nature.html
@@ -47,7 +47,7 @@ poznajmypolske.pl
                <ul>
                    <li>źródłem danych jest <a style="font-weight: bold; color: black;" href="https://www.geoportal.gov.pl/pl/dane/panstwowy-rejestr-nazw-geograficznych-prng/">Państwowy Rejestr Nazw Geograficznych (PRNG),</a></li>
                    <li>dla powiatów i gmin listy rozwijalne pojawiają się po wybraniu nadrzędnych jednostek administracyjnych,</li>
-                   <li>każdy wyszukany obiekt zawiera odnośnik do lokalizacji na mapie.</li>
+                   <li>każdy wyszukany obiekt zawiera odnośnik do lokalizacji na mapach Google oraz pozwala na zapytanie o niego sztuczną inteligencję (openai.com).</li>
                </ul>
            </div>
        </div>
@@ -110,6 +110,7 @@ poznajmypolske.pl
                 <option value="rzeki">Rzeki, potoki, strumyki, strugi, kanały</option>
                 <option value="skaly">Skały, głazy</option>
                 <option value="uroczyska">Uroczyska</option>
+                <option value="wodospady">Wodospady</option>
                 <option value="inne">Inne obiekty geograficzne</option>
             </select>
         </div>
