--- a/polishness/templates/polishness/nature_single.html
+++ b/polishness/templates/polishness/nature_single.html
@@ -29,7 +29,7 @@ poznajmypolske.pl
     }
 
     .table-striped tbody tr:nth-of-type(2n+1) {
-        background-color: #F5DE91; /* Delikatny pszeniczny kolor */
+        background-color: #F5DECF; /* Delikatny pszeniczny kolor */
     }
 
 
@@ -81,8 +81,8 @@ poznajmypolske.pl
 
             </div>
             <!-- Button with call-to-action -->
-                <a href="https://www.google.com/maps?q={{nature_item.latitude}},{{nature_item.longitude}}" class="btn btn-primary btn-lg mt-3" style="font-weight: bold; text-align: center;">Link do miejsca na mapach Google.</a>
-                <a href="{% url 'polishness:nature_single_ai' nature_item.id %}" class="btn btn-primary btn-lg mt-3" style="font-weight: bold; text-align: center;">Zapytaj sztucznej inteligencji o to miejsce (openai.com).</a>
+                <a href="https://www.google.com/maps?q={{nature_item.latitude}},{{nature_item.longitude}}" class="btn btn-dark btn-lg mt-3" style="font-weight: bold; text-align: center;">Link do miejsca na mapach Google.</a>
+                <a href="{% url 'polishness:nature_single_ai' nature_item.id %}" class="btn btn-dark btn-lg mt-3" style="font-weight: bold; text-align: center;">Zapytaj sztucznej inteligencji o to miejsce (openai.com).</a>
 
         </div>
     </div>
