adds Starorzecza for search engine

--- a/polishness/templates/polishness/nature.html
+++ b/polishness/templates/polishness/nature.html
@@ -94,11 +94,11 @@ poznajmypolske.pl
         <div class="col-lg-6 col-md-6 col-sm-12 p-1">
             <select name="nature_objects" id="nature_objects"  class="form-control custom-rounded">
                 <option value="" disabled selected>...wybierz obiekt przyrodniczy...</option>
-                <option value="doliny">Doliny, jary, wąwozy, rowy</option>
+                <option value="doliny">Doliny, jary, wąwozy, rowy, obniżenia, zagłębienia</option>
                 <option value="bagna">Bagna, błota, torfowiska</option>
                 <option value="cyrki">Cyrki lodowcowe</option>
-                <option value="gory">Góry, szczyty, wzgórza, zbocza</option>
-                <option value="groble">Groble</option>
+                <option value="gory">Góry, pasma górskie, szczyty, wzgórza, zbocza</option>
+                <option value="groble">Groble, śluzy</option>
                 <option value="jaskinie">Jaskinie, groty</option>
                 <option value="jeziora">Jeziora, stawy, zbiorniki wodne</option>
                 <option value="lasy">Lasy</option>
@@ -109,6 +109,7 @@ poznajmypolske.pl
                 <option value="regiony">Regiony naturalne</option>
                 <option value="rzeki">Rzeki, potoki, strumyki, strugi, kanały</option>
                 <option value="skaly">Skały, głazy</option>
+                <option value="starorzecza">Stare koryta rzek</option>
                 <option value="uroczyska">Uroczyska</option>
                 <option value="wodospady">Wodospady</option>
                 <option value="inne">Inne obiekty geograficzne</option>
