add small stylistic change: Nature

--- a/polishness/templates/polishness/nature.html
+++ b/polishness/templates/polishness/nature.html
@@ -94,9 +94,9 @@ poznajmypolske.pl
         <div class="col-lg-6 col-md-6 col-sm-12 p-1">
             <select name="nature_objects" id="nature_objects"  class="form-control custom-rounded">
                 <option value="" disabled selected>...wybierz obiekt przyrodniczy...</option>
-                <option value="doliny">Doliny, jary, wąwozy, rowy, obniżenia, zagłębienia</option>
                 <option value="bagna">Bagna, błota, torfowiska</option>
                 <option value="cyrki">Cyrki lodowcowe</option>
+                <option value="doliny">Doliny, jary, obniżenia, rowy, wąwozy, zagłębienia</option>
                 <option value="gory">Góry, pasma górskie, szczyty, wzgórza, zbocza</option>
                 <option value="groble">Groble, śluzy</option>
                 <option value="jaskinie">Jaskinie, groty</option>
