adds displaying number of monuments / geo items when are searched

--- a/polishness/templates/polishness/archeological-monuments.html
+++ b/polishness/templates/polishness/archeological-monuments.html
@@ -31,7 +31,7 @@ poznajmypolske.pl
     {% else %}
     <div class="row m-2 p-2">
         <div class="col">
-            <div class="success">Znalezione zabytki archeologiczne:</div>
+            <div class="success">Znalezione zabytki archeologiczne (ilość: {{ archeo_monuments|length }}):</div>
         </div>
     </div>
     <div class="row m-4">
