--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -123,7 +123,7 @@ poznajmypolske.pl
     {% else %}
     <div class="row m-2 p-2">
         <div class="col">
-            <div class="success">Znalezione zabytki:</div>
+            <div class="success">Znaleziono zabytki (ilość: {{ monuments|length }}):</div>
         </div>
     </div>
     <div class="row m-4">
