--- a/polishness/templates/polishness/nature.html
+++ b/polishness/templates/polishness/nature.html
@@ -142,7 +142,7 @@ poznajmypolske.pl
     {% else %}
     <div class="row m-2 p-2">
         <div class="col">
-            <div class="success">Znalezione obiekty przyrodnicze:</div>
+            <div class="success">Znaleziono obiekty przyrodnicze (ilość: {{ nature_items|length }}):</div>
         </div>
     </div>
     <div class="row m-4">
