--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -130,6 +130,11 @@
         font-size: 14px !important;
         padding: 6px; /* Mniejsze odstępy wewnętrzne */
      }
+     .custom-form {
+        margin: 10px; /* Mniejsze odstępy wewnętrzne */
+
+     }
+
     }
 
 
