--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -98,7 +98,7 @@ poznajmypolske.pl
     <div class="row mb-3">
     <div class="col-lg-8 col-md-8 col-sm-12 d-flex align-items-center">
         <label for="quantity" class="form-label mb-0">Maksymalna liczba wynikowych wierszy:</label>
-        <input type="number" id="quantity" name="quantity" class="form-control custom-rounded" placeholder="...wpisz liczbę..." value="12" autocomplete="off" style="flex-grow: 1;">
+        <input type="number" id="quantity" name="quantity" class="form-control custom-rounded" placeholder="...wpisz liczbę..." value="100" autocomplete="off" style="flex-grow: 1;">
 
     </div>
         <div class="col-lg-8 col-md-8 col-sm-12 d-flex align-items-center">
@@ -110,6 +110,7 @@ poznajmypolske.pl
         </div>
     </div>
 </form>
+    <small>Maksymalnie można wyszukać 100 zabytków.</small><br>
 </div>
 
 {% else %}
