--- a/polishness/templates/polishness/monument_single.html
+++ b/polishness/templates/polishness/monument_single.html
@@ -111,11 +111,14 @@ poznajmypolske.pl
                         </tbody>
                     </table>
                 </div>
+                <div class="text-custom">
+                    <p>{{response_ai}}</p>
+                </div>
 
             </div>
             <!-- Button with call-to-action -->
                 <a href="https://zabytek.pl/pl/obiekty/zabytek?inspire_id={{monument.library_id}}&rejestr=rejestr-zabytk%C3%B3w" class="btn btn-dark btn-lg mt-3" style="font-weight: bold; text-align: center;">Informacje na portalu zabytek.pl.</a>
-                <a href="{% url 'polishness:monument_single_ai' monument.id %}" class="btn btn-dark btn-lg mt-1" style="font-weight: bold; text-align: center;">Zapytaj sztucznej inteligencji o to miejsce (openai.com).</a>
+                <a href="{% url 'polishness:monument_single_ai' monument.id %}" class="btn btn-dark btn-lg mt-1" style="font-weight: bold; text-align: center;">Zapytaj sztucznej inteligencji o więcej informacji.</a>
 
         </div>
     </div>
