adds link to Google maps if coordinates exist (for monuments)

--- a/polishness/templates/polishness/nature_single_ai.html
+++ b/polishness/templates/polishness/nature_single_ai.html
@@ -29,6 +29,12 @@ poznajmypolske.pl
         border: 2px solid #000;
     }
 
+
+    .card h5 {
+        background-color: #F5DECF;
+    }
+
+
 {% endblock %}
 
 {% block content %}
