--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -93,6 +93,13 @@ poznajmypolske.pl
     <div class="col-md-6 col-sm-12 p-1">
             <input type="text" name="locality" placeholder="...wpisz miejscowość..." class="form-control custom-rounded" autocomplete="off">
     </div>
+    <div class="col-md-6 col-sm-12 p-1">
+            <input type="text" name="function" placeholder="...wpisz funkcję zabytku..." class="form-control custom-rounded" autocomplete="off">
+    </div>
+    <div class="col-md-6 col-sm-12 p-1">
+            <input type="text" name="chronology" placeholder="...wpisz datę powstania zabytku..." class="form-control custom-rounded" autocomplete="off">
+    </div>
+
 
     </div>
     <div class="row mb-3">
